tdd study, chapter 23, minor refactor for InjectionProvider